# Minecraft

./: .gitattributes  .gitignore  CMakeLists.txt
src/: glad.c  main.cpp
